--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"ext-json": "*",
 		"ext-mbstring": "*",
 		"ext-openssl": "*",
-		"php-tootbot/php-tootbot": "dev-main"
+		"php-tootbot/php-tootbot": "dev-main#d9f51ea5e1abf892a83e974054d94a93bbfd8a1a"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9.5",
