--- a/composer.json
+++ b/composer.json
@@ -9,28 +9,25 @@
 			"homepage":"https://github.com/php-tootbot/php-tootbot/graphs/contributors"
 		}
 	],
-	"minimum-stability": "dev",
+	"minimum-stability": "stable",
 	"prefer-stable": true,
 	"require": {
 		"php": "^8.1",
-		"ext-curl": "*",
-		"ext-json": "*",
-		"ext-mbstring": "*",
-		"ext-openssl": "*",
-		"php-tootbot/php-tootbot": "dev-main#b2284114241e355be65aa817ac318e298eb2007e"
+		"chillerlan/php-settings-container": "^3.2",
+		"php-tootbot/php-tootbot": "^1.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "^10.2",
+		"phpunit/phpunit": "^10.5",
 		"phan/phan": "^5.4"
 	},
 	"autoload": {
 		"psr-4": {
-			"PHPTootBot\\MyTootBot\\": "src/"
+			"PHPTootBot\\MyTootBot\\": "src"
 		}
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"PHPTootBot\\MyTootBotTest\\": "tests/"
+			"PHPTootBot\\MyTootBotTest\\": "tests"
 		}
 	},
 	"scripts": {
